# src/routes/home.ts
@@ -3,8 +3,8 @@ import { isAuth } from '../services/auth';
 import teacherController from '../controllers/teacherController';
 const router = express.Router();
 import TeacherInfoComment from '../swagger/comment/teacherInfo.comment';
-import homeController from '../controllers/homeController';
 import HomeComment from '../swagger/comment/home.comment';
+import HomeController from '../controllers/homeController';
 
 router.post(
   '/teacher_apply',
@@ -16,7 +16,9 @@ router.post(
 router.get(
   '/course_videos/all',
   HomeComment.getCourseVideos,
-  homeController.getCourseVideos
+  HomeController.getCourseVideos
 );
+
+router.get('/courses/all', HomeComment.getCourses, HomeController.getCourses);
 
 export default router;
